src/ground_slash/antlr/SLASHParser.py
# Generated from SLASH.g4 by ANTLR 4.11.1
# encoding: utf-8
import sys
from io import StringIO

from antlr4 import *

if sys.version_info[1] > 5:
    from typing import TextIO
else:
    from typing.io import TextIO




class SLASHParser(Parser):

    grammarFileName = "SLASH.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [DFA(ds, i) for i, ds in enumerate(atn.decisionToState)]

    sharedContextCache = PredictionContextCache()

    literalNames = [
        "<INVALID>",
        "'not'",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "'_'",
        "'.'",
        "','",
        "'?'",
        "':'",
        "';'",
        "'|'",
        "':-'",
        "':~'",
        "'+'",
        "'-'",
        "'*'",
        "'/'",
        "'@'",
        "'('",
        "')'",
        "'['",
        "']'",
        "'{'",
        "'}'",
        "'='",
        "'!='",
        "'<'",
        "'>'",
        "'<='",
        "'>='",
        "'#count'",
        "'#max'",
        "'#min'",
        "'#sum'",
    ]

    symbolicNames = [
        "<INVALID>",
        "NAF",
        "ID",
        "VARIABLE",
        "STRING",
        "NUMBER",
        "ANONYMOUS_VARIABLE",
        "DOT",
        "COMMA",
        "QUERY_MARK",
        "COLON",
        "SEMICOLON",
        "OR",
        "CONS",
        "WCONS",
        "PLUS",
        "MINUS",
        "TIMES",
        "DIV",
        "AT",
        "PAREN_OPEN",
        "PAREN_CLOSE",
        "SQUARE_OPEN",
        "SQUARE_CLOSE",
        "CURLY_OPEN",
        "CURLY_CLOSE",
        "EQUAL",
        "UNEQUAL",
        "LESS",
        "GREATER",
        "LESS_OR_EQ",
        "GREATER_OR_EQ",
        "COUNT",
        "MAX",
        "MIN",
        "SUM",
        "COMMENT",
        "MULTI_LINE_COMMENT",
        "BLANK",
    ]

    RULE_program = 0
    RULE_statements = 1
    RULE_query = 2
    RULE_statement = 3
    RULE_head = 4
    RULE_body = 5
    RULE_disjunction = 6
    RULE_choice = 7
    RULE_choice_elements = 8
    RULE_choice_element = 9
    RULE_aggregate = 10
    RULE_aggregate_elements = 11
    RULE_aggregate_element = 12
    RULE_aggregate_function = 13
    RULE_naf_literals = 14
    RULE_naf_literal = 15
    RULE_classical_literal = 16
    RULE_builtin_atom = 17
    RULE_relop = 18
    RULE_terms = 19
    RULE_term = 20
    RULE_func_term = 21
    RULE_arith_term = 22
    RULE_arith_sum = 23
    RULE_arith_prod = 24
    RULE_arith_atom = 25

    ruleNames = [
        "program",
        "statements",
        "query",
        "statement",
        "head",
        "body",
        "disjunction",
        "choice",
        "choice_elements",
        "choice_element",
        "aggregate",
        "aggregate_elements",
        "aggregate_element",
        "aggregate_function",
        "naf_literals",
        "naf_literal",
        "classical_literal",
        "builtin_atom",
        "relop",
        "terms",
        "term",
        "func_term",
        "arith_term",
        "arith_sum",
        "arith_prod",
        "arith_atom",
    ]

    EOF = Token.EOF
    NAF = 1
    ID = 2
    VARIABLE = 3
    STRING = 4
    NUMBER = 5
    ANONYMOUS_VARIABLE = 6
    DOT = 7
    COMMA = 8
    QUERY_MARK = 9
    COLON = 10
    SEMICOLON = 11
    OR = 12
    CONS = 13
    WCONS = 14
    PLUS = 15
    MINUS = 16
    TIMES = 17
    DIV = 18
    AT = 19
    PAREN_OPEN = 20
    PAREN_CLOSE = 21
    SQUARE_OPEN = 22
    SQUARE_CLOSE = 23
    CURLY_OPEN = 24
    CURLY_CLOSE = 25
    EQUAL = 26
    UNEQUAL = 27
    LESS = 28
    GREATER = 29
    LESS_OR_EQ = 30
    GREATER_OR_EQ = 31
    COUNT = 32
    MAX = 33
    MIN = 34
    SUM = 35
    COMMENT = 36
    MULTI_LINE_COMMENT = 37
    BLANK = 38

    def __init__(self, input: TokenStream, output: TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.11.1")
        self._interp = ParserATNSimulator(
            self, self.atn, self.decisionsToDFA, self.sharedContextCache
        )
        self._predicates = None

    class ProgramContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(SLASHParser.EOF, 0)

        def statements(self):
            return self.getTypedRuleContext(SLASHParser.StatementsContext, 0)

        def query(self):
            return self.getTypedRuleContext(SLASHParser.QueryContext, 0)

        def getRuleIndex(self):
            return SLASHParser.RULE_program

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitProgram"):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)

    def program(self):

        localctx = SLASHParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 0, self._ctx)
            if la_ == 1:
                self.state = 52
                self.statements()

            self.state = 56
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == 2 or _la == 16:
                self.state = 55
                self.query()

            self.state = 58
            self.match(SLASHParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementsContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(SLASHParser.StatementContext)
            else:
                return self.getTypedRuleContext(SLASHParser.StatementContext, i)

        def getRuleIndex(self):
            return SLASHParser.RULE_statements

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitStatements"):
                return visitor.visitStatements(self)
            else:
                return visitor.visitChildren(self)

    def statements(self):

        localctx = SLASHParser.StatementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statements)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self._errHandler.sync(self)
            _alt = 1
            while _alt != 2 and _alt != ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 60
                    self.statement()

                else:
                    raise NoViableAltException(self)
                self.state = 63
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input, 2, self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class QueryContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def classical_literal(self):
            return self.getTypedRuleContext(SLASHParser.Classical_literalContext, 0)

        def QUERY_MARK(self):
            return self.getToken(SLASHParser.QUERY_MARK, 0)

        def getRuleIndex(self):
            return SLASHParser.RULE_query

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitQuery"):
                return visitor.visitQuery(self)
            else:
                return visitor.visitChildren(self)

    def query(self):

        localctx = SLASHParser.QueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_query)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.classical_literal()
            self.state = 66
            self.match(SLASHParser.QUERY_MARK)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONS(self):
            return self.getToken(SLASHParser.CONS, 0)

        def DOT(self):
            return self.getToken(SLASHParser.DOT, 0)

        def body(self):
            return self.getTypedRuleContext(SLASHParser.BodyContext, 0)

        def head(self):
            return self.getTypedRuleContext(SLASHParser.HeadContext, 0)

        def getRuleIndex(self):
            return SLASHParser.RULE_statement

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitStatement"):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)

    def statement(self):

        localctx = SLASHParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_statement)
        self._la = 0  # Token type
        try:
            self.state = 82
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [13]:
                self.enterOuterAlt(localctx, 1)
                self.state = 68
                self.match(SLASHParser.CONS)
                self.state = 70
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if ((_la) & ~0x3F) == 0 and ((1 << _la) & 64425623678) != 0:
                    self.state = 69
                    self.body()

                self.state = 72
                self.match(SLASHParser.DOT)
                pass
            elif token in [2, 3, 4, 5, 6, 16, 20, 24]:
                self.enterOuterAlt(localctx, 2)
                self.state = 73
                self.head()
                self.state = 78
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la == 13:
                    self.state = 74
                    self.match(SLASHParser.CONS)
                    self.state = 76
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if ((_la) & ~0x3F) == 0 and ((1 << _la) & 64425623678) != 0:
                        self.state = 75
                        self.body()

                self.state = 80
                self.match(SLASHParser.DOT)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class HeadContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def disjunction(self):
            return self.getTypedRuleContext(SLASHParser.DisjunctionContext, 0)

        def choice(self):
            return self.getTypedRuleContext(SLASHParser.ChoiceContext, 0)

        def getRuleIndex(self):
            return SLASHParser.RULE_head

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitHead"):
                return visitor.visitHead(self)
            else:
                return visitor.visitChildren(self)

    def head(self):

        localctx = SLASHParser.HeadContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_head)
        try:
            self.state = 86
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 7, self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 84
                self.disjunction()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 85
                self.choice()
                pass

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BodyContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def naf_literal(self):
            return self.getTypedRuleContext(SLASHParser.Naf_literalContext, 0)

        def aggregate(self):
            return self.getTypedRuleContext(SLASHParser.AggregateContext, 0)

        def COMMA(self):
            return self.getToken(SLASHParser.COMMA, 0)

        def body(self):
            return self.getTypedRuleContext(SLASHParser.BodyContext, 0)

        def NAF(self):
            return self.getToken(SLASHParser.NAF, 0)

        def getRuleIndex(self):
            return SLASHParser.RULE_body

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitBody"):
                return visitor.visitBody(self)
            else:
                return visitor.visitChildren(self)

    def body(self):

        localctx = SLASHParser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_body)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 9, self._ctx)
            if la_ == 1:
                self.state = 88
                self.naf_literal()
                pass

            elif la_ == 2:
                self.state = 90
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la == 1:
                    self.state = 89
                    self.match(SLASHParser.NAF)

                self.state = 92
                self.aggregate()
                pass

            self.state = 97
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == 8:
                self.state = 95
                self.match(SLASHParser.COMMA)
                self.state = 96
                self.body()

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DisjunctionContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def classical_literal(self):
            return self.getTypedRuleContext(SLASHParser.Classical_literalContext, 0)

        def OR(self):
            return self.getToken(SLASHParser.OR, 0)

        def disjunction(self):
            return self.getTypedRuleContext(SLASHParser.DisjunctionContext, 0)

        def getRuleIndex(self):
            return SLASHParser.RULE_disjunction

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitDisjunction"):
                return visitor.visitDisjunction(self)
            else:
                return visitor.visitChildren(self)

    def disjunction(self):

        localctx = SLASHParser.DisjunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_disjunction)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.classical_literal()
            self.state = 102
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == 12:
                self.state = 100
                self.match(SLASHParser.OR)
                self.state = 101
                self.disjunction()

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ChoiceContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CURLY_OPEN(self):
            return self.getToken(SLASHParser.CURLY_OPEN, 0)

        def CURLY_CLOSE(self):
            return self.getToken(SLASHParser.CURLY_CLOSE, 0)

        def term(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(SLASHParser.TermContext)
            else:
                return self.getTypedRuleContext(SLASHParser.TermContext, i)

        def relop(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(SLASHParser.RelopContext)
            else:
                return self.getTypedRuleContext(SLASHParser.RelopContext, i)

        def choice_elements(self):
            return self.getTypedRuleContext(SLASHParser.Choice_elementsContext, 0)

        def getRuleIndex(self):
            return SLASHParser.RULE_choice

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitChoice"):
                return visitor.visitChoice(self)
            else:
                return visitor.visitChildren(self)

    def choice(self):

        localctx = SLASHParser.ChoiceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_choice)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if ((_la) & ~0x3F) == 0 and ((1 << _la) & 1114236) != 0:
                self.state = 104
                self.term()
                self.state = 105
                self.relop()

            self.state = 109
            self.match(SLASHParser.CURLY_OPEN)
            self.state = 111
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == 2 or _la == 16:
                self.state = 110
                self.choice_elements()

            self.state = 113
            self.match(SLASHParser.CURLY_CLOSE)
            self.state = 117
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if ((_la) & ~0x3F) == 0 and ((1 << _la) & 4227858432) != 0:
                self.state = 114
                self.relop()
                self.state = 115
                self.term()

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Choice_elementsContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def choice_element(self):
            return self.getTypedRuleContext(SLASHParser.Choice_elementContext, 0)

        def SEMICOLON(self):
            return self.getToken(SLASHParser.SEMICOLON, 0)

        def choice_elements(self):
            return self.getTypedRuleContext(SLASHParser.Choice_elementsContext, 0)

        def getRuleIndex(self):
            return SLASHParser.RULE_choice_elements

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitChoice_elements"):
                return visitor.visitChoice_elements(self)
            else:
                return visitor.visitChildren(self)

    def choice_elements(self):

        localctx = SLASHParser.Choice_elementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_choice_elements)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.choice_element()
            self.state = 122
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == 11:
                self.state = 120
                self.match(SLASHParser.SEMICOLON)
                self.state = 121
                self.choice_elements()

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Choice_elementContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def classical_literal(self):
            return self.getTypedRuleContext(SLASHParser.Classical_literalContext, 0)

        def COLON(self):
            return self.getToken(SLASHParser.COLON, 0)

        def naf_literals(self):
            return self.getTypedRuleContext(SLASHParser.Naf_literalsContext, 0)

        def getRuleIndex(self):
            return SLASHParser.RULE_choice_element

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitChoice_element"):
                return visitor.visitChoice_element(self)
            else:
                return visitor.visitChildren(self)

    def choice_element(self):

        localctx = SLASHParser.Choice_elementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_choice_element)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.classical_literal()
            self.state = 129
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == 10:
                self.state = 125
                self.match(SLASHParser.COLON)
                self.state = 127
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if ((_la) & ~0x3F) == 0 and ((1 << _la) & 1114238) != 0:
                    self.state = 126
                    self.naf_literals()

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AggregateContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def aggregate_function(self):
            return self.getTypedRuleContext(SLASHParser.Aggregate_functionContext, 0)

        def CURLY_OPEN(self):
            return self.getToken(SLASHParser.CURLY_OPEN, 0)

        def CURLY_CLOSE(self):
            return self.getToken(SLASHParser.CURLY_CLOSE, 0)

        def term(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(SLASHParser.TermContext)
            else:
                return self.getTypedRuleContext(SLASHParser.TermContext, i)

        def relop(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(SLASHParser.RelopContext)
            else:
                return self.getTypedRuleContext(SLASHParser.RelopContext, i)

        def aggregate_elements(self):
            return self.getTypedRuleContext(SLASHParser.Aggregate_elementsContext, 0)

        def getRuleIndex(self):
            return SLASHParser.RULE_aggregate

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitAggregate"):
                return visitor.visitAggregate(self)
            else:
                return visitor.visitChildren(self)

    def aggregate(self):

        localctx = SLASHParser.AggregateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_aggregate)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if ((_la) & ~0x3F) == 0 and ((1 << _la) & 1114236) != 0:
                self.state = 131
                self.term()
                self.state = 132
                self.relop()

            self.state = 136
            self.aggregate_function()
            self.state = 137
            self.match(SLASHParser.CURLY_OPEN)
            self.state = 139
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if ((_la) & ~0x3F) == 0 and ((1 << _la) & 1115260) != 0:
                self.state = 138
                self.aggregate_elements()

            self.state = 141
            self.match(SLASHParser.CURLY_CLOSE)
            self.state = 145
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if ((_la) & ~0x3F) == 0 and ((1 << _la) & 4227858432) != 0:
                self.state = 142
                self.relop()
                self.state = 143
                self.term()

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Aggregate_elementsContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def aggregate_element(self):
            return self.getTypedRuleContext(SLASHParser.Aggregate_elementContext, 0)

        def SEMICOLON(self):
            return self.getToken(SLASHParser.SEMICOLON, 0)

        def aggregate_elements(self):
            return self.getTypedRuleContext(SLASHParser.Aggregate_elementsContext, 0)

        def getRuleIndex(self):
            return SLASHParser.RULE_aggregate_elements

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitAggregate_elements"):
                return visitor.visitAggregate_elements(self)
            else:
                return visitor.visitChildren(self)

    def aggregate_elements(self):

        localctx = SLASHParser.Aggregate_elementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_aggregate_elements)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self.aggregate_element()
            self.state = 150
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == 11:
                self.state = 148
                self.match(SLASHParser.SEMICOLON)
                self.state = 149
                self.aggregate_elements()

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Aggregate_elementContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def terms(self):
            return self.getTypedRuleContext(SLASHParser.TermsContext, 0)

        def COLON(self):
            return self.getToken(SLASHParser.COLON, 0)

        def naf_literals(self):
            return self.getTypedRuleContext(SLASHParser.Naf_literalsContext, 0)

        def getRuleIndex(self):
            return SLASHParser.RULE_aggregate_element

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitAggregate_element"):
                return visitor.visitAggregate_element(self)
            else:
                return visitor.visitChildren(self)

    def aggregate_element(self):

        localctx = SLASHParser.Aggregate_elementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_aggregate_element)
        self._la = 0  # Token type
        try:
            self.state = 164
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 24, self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 152
                self.terms()
                self.state = 154
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la == 10:
                    self.state = 153
                    self.match(SLASHParser.COLON)

                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 156
                self.match(SLASHParser.COLON)
                self.state = 158
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if ((_la) & ~0x3F) == 0 and ((1 << _la) & 1114238) != 0:
                    self.state = 157
                    self.naf_literals()

                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 160
                self.terms()
                self.state = 161
                self.match(SLASHParser.COLON)
                self.state = 162
                self.naf_literals()
                pass

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Aggregate_functionContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COUNT(self):
            return self.getToken(SLASHParser.COUNT, 0)

        def MAX(self):
            return self.getToken(SLASHParser.MAX, 0)

        def MIN(self):
            return self.getToken(SLASHParser.MIN, 0)

        def SUM(self):
            return self.getToken(SLASHParser.SUM, 0)

        def getRuleIndex(self):
            return SLASHParser.RULE_aggregate_function

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitAggregate_function"):
                return visitor.visitAggregate_function(self)
            else:
                return visitor.visitChildren(self)

    def aggregate_function(self):

        localctx = SLASHParser.Aggregate_functionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_aggregate_function)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 166
            _la = self._input.LA(1)
            if not (((_la) & ~0x3F) == 0 and ((1 << _la) & 64424509440) != 0):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Naf_literalsContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def naf_literal(self):
            return self.getTypedRuleContext(SLASHParser.Naf_literalContext, 0)

        def COMMA(self):
            return self.getToken(SLASHParser.COMMA, 0)

        def naf_literals(self):
            return self.getTypedRuleContext(SLASHParser.Naf_literalsContext, 0)

        def getRuleIndex(self):
            return SLASHParser.RULE_naf_literals

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitNaf_literals"):
                return visitor.visitNaf_literals(self)
            else:
                return visitor.visitChildren(self)

    def naf_literals(self):
